--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -2,10 +2,13 @@
   color: white;
   background-size: contain;
   padding: 150px 0;
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-
+  width: 100%;
+  text-align: center;
+  /* display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 500px; */
 }
 
 .banner h1 {
